--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "typescript": "^5.0.2",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
